--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dani.app_restaurante">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -16,6 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".CafeActivity"
+            android:label="@string/title_activity_cafe"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".PostresActivity"
+            android:label="@string/title_activity_postres"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SegundosActivity"
+            android:label="@string/title_activity_segundos"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -55,7 +66,7 @@
         <activity
             android:name=".PrimerosActivity"
             android:label="@string/title_activity_primeros"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
